log
Thu 16 May 2024 03:58:16 PM UTC: 
 sudoku.c | 16 ++++------------
 1 file changed, 4 insertions(+), 12 deletions(-)
 tests:  0|5
total_score: 0/70
f8ee0c5
Thu 16 May 2024 04:01:42 PM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|5
total_score: 0/70
7a1f9b3
Thu 16 May 2024 04:09:57 PM UTC: 
 sudoku.c | 22 ++++++++++------------
 1 file changed, 10 insertions(+), 12 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:15: error: implicit declaration of function ‘isvalid’; did you mean ‘is_valid’? [-Werror=implicit-function-declaration]
   56 |           if (isvalid(adj))
      |               ^~~~~~~
      |               is_valid
cc1: all warnings being treated as errors
Compilation failed
ee4ac26
Thu 16 May 2024 04:10:02 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
7b0bee1
Thu 16 May 2024 04:11:25 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
d39bf43
Sun 19 May 2024 10:27:44 PM UTC: 
 sudoku.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
91d2e27
Sun 19 May 2024 10:29:12 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|3
total_score: 35/70
32ed78a
Sun 19 May 2024 10:29:58 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
0a74be6
